--- a/index.html
+++ b/index.html
@@ -1,27 +1,216 @@
+
 <!DOCTYPE html>
 <html>
-<head>
- <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title></title>
-    <script src="./js/script.js"></script>
-    <link rel="stylesheet" href="./css/style.css" />
-</head>
-<style>
-	
-	</style >
-<body>
-<div class="human">
-<div class="hair"></div>
-<div class="face">
-<div class="eye"></div>
-<div class="eye1"></div>
-<div class="nose"></div>
-<div class="cheek"></div>
-<div class="mouth"></div>
-<div class="neck"></div>
-</div>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>GIRL</title>
+        <!-- <script src="./js/script.js"></script> -->
+        <!-- <link rel="stylesheet" href="./css/style.css" /> -->
+        <style>
+            :root{
+                --hair-color:#424b54;
+                --skin-color:#f0beaf;
+                }
+            * {
+                padding : 0;
+                margin : 0;
+            }
 
-<div class="body"></div>
-</div>
-</body>
+            .Gril {
+                background: #252525;
+                color: black;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-wrap: wrap;
+                width: 100%;
+                height: 90vh;
+            }
+            /* .Gril:hover{
+                content:BASMA;
+                background-color:tomato;
+                width:60px;
+                height :40px;
+            } */
+            .human{
+                background-color: var(--skin-color);
+                width: 270px;
+                height: 270px;
+                border: 3px solid #fff;
+                border-radius: 50%;
+                overflow: hidden;
+                position: relative;
+                transform: translateX(0%);
+                }
+            .hair{
+                background-color:var(--hair-color);
+                width:120px;
+                height:180px;
+                position:absolute;
+                top:40px;
+                left:50%;
+                transform:translateX(-50%);
+                border-top-right-radius:80px;
+                border-top-left-radius:80px;
+                z-index:1;
+                }
+            .hair:hover{
+		        background-color:rgb(235, 238, 229);
+	            }
+            .hair::before {
+                Content: "GIRL";
+                color: rgb(226, 13, 120);
+                font-size: 30PX;
+                text-align: center;
+                vertical-align: middle;
+                width: 70px;
+                height: 60px;
+                position: FIXED;
+                TOP: -35PX;
+                RIGHT: 27PX;
+                }
+            .face::before {
+                content:"" ;
+                background-color:var(--hair-color);
+                width:60px;
+                height :40px;
+                position :absolute;
+                top:-24px;
+                left:-5px;
+                border-radius:50%;
+                box-shadow:40px 10px 0 -8px var(--hair-color);
+                }
+            .face{
+                background-color:var(--skin-color);
+                width:70px;
+                height:80px;
+                position:absolute;
+                top:70px;
+                left:50%;
+                transform:translateX(-50%);
+                z-index:3;
+                border-radius:0 0 80px 80px;
+                }
+            
+            .eye{
+                background-color:var(--hair-color);
+                width:10px;
+                height:10px;
+                position:absolute;
+                top:27px;
+                left:8px;
+                box-shadow:42px  0 0 var(--hair-color);
+                border-radius: 50%;
+                }
+            .eye::before {
+                content:"" ;
+                background-color:#626f7d;
+                width:12px;
+                height :2px;
+                position :absolute;
+                top:-5px;
+                left:-1px;
+                border-radius:10px;
+                box-shadow:42px 0 0 #626f7d ;
+                }
+                
+            .nose{
+                background-color:#db9b99;
+                width:8px;
+                height:16px;
+                position:absolute;
+                top:28px;
+                left:50%;
+                transform:translateX(-50%);
+                border-radius:12px;
+                }       
+            .mouth{
+                background-color:var(--hair-color);
+                width:28px;
+                height:14px;
+                position:absolute;
+                top:52px;
+                left:50%;
+                transform:translateX(-50%);
+                overflow:hidden;
+                border-radius:0 0 20px 20px;
+                }
+            .mouth::before {
+                content:"" ;
+                background-color:#f6828c;
+                width:24px;
+                height :20px;
+                position :absolute;
+                top:5px;
+                left:2px;
+                border-radius:50%;
+                }     
+            .cheek{
+                background-color:#eba8a8;
+                width:7px;
+                height:7px;
+                position:absolute;
+                bottom:30px;
+                left :5px;
+                border-radius:50%;
+                box-shadow:48px 0 0 #eba8a8 ;
+                }
+            .neck{
+                background-color:var(--skin-color);
+                width:27px;
+                height:25px;
+                position:absolute;
+                bottom :-12px;
+                left:50%;
+                transform:translateX(-50%);
+                border-radius:50px;
+                }    
+            .body{
+                background-color:#bb004f;
+                width: 125px;
+                height: 123px;
+                position:absolute;
+                TOP: 153px;
+                left:50%;
+                z-index:2;
+                transform:translateX(-50%);
+                border-radius:50px 50px 0 0;
+                }
+            .body::before {
+                content: "";
+                width: 1px;
+                height: 79px;
+                background-color: #535353;
+                position: absolute;
+                right: 23px;
+                bottom: 4px;
+	            }
+            .body::after {
+                content: "";
+                width: 1px;
+                height: 75px;
+                background-color: #535353;
+                position: absolute;
+                right: 100px;
+                bottom: 4px;
+                } 
+        </style>
+    </head>
+    <body>
+        <h1 style="text-align: center;">GIRL IMAGE</h1>
+        <div class="Gril">
+            <div class="human">
+                <div class="hair"></div>
+                <div class="face">
+                    <div class="eye"></div>
+                    <div class="eye1"></div>
+                    <div class="nose"></div>
+                    <div class="cheek"></div>
+                    <div class="mouth"></div>
+                    <div class="neck"></div>
+                </div>
+                <div class="body"></div>
+            </div>
+        </div>
+    </body>
 </html>
