--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 border-top-left-radius:80px;
                 z-index:1;
                 }
-            .hair:hover{
+/*             .hair:hover{
 		        background-color:rgb(235, 238, 229);
-	            }
+	            } */
             .hair::before {
                 Content: "GIRL";
                 color: rgb(226, 13, 120);
